--- a/src/test/resources/cucumber.properties
+++ b/src/test/resources/cucumber.properties
@@ -1,3 +1,3 @@
 cucumber.publish.quiet=true
-#cucumber.filter.tags=@get1
+cucumber.filter.tags= not @web
 cucumber.glue=lucapi_cucumber.lucapi_cucumber
