--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -1,3 +1,3 @@
 cucumber.publish.quiet=true
 cucumber.glue=lucapi_cucumber.lucapi_cucumber
-cucumber.filter.tags= not @web
+#cucumber.filter.tags= @error
